<resources>
    <string name="app_name">Buut</string>


    <string name="initial_title">Welkom bij Buut!</string>
    <string name="logged_in_title">You’re logged in!</string>
    <string name="logged_out_title">You’re logged out.</string>
    <string name="log_in_button">Log In</string>
    <string name="log_out_button">Log Out</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email*</string>
    <string name="register_button">Register</string>
    <string name="email_is_blank_error">The email can\'t be blank</string>
    <string name="email_not_valid_error">This is not a valid email</string>
    <string name="password_not_valid_error">assword must have at least 8 characters, one uppercase letter, one number, and one special character</string>
    <string name="invalid_password_length_error">The password must be at least %d characters</string>
    <string name="invalid_password_no_digit_error">The password must have at least one digit</string>
    <string name="invalid_password_no_upper_case_error">The password must contain at least one upper case character</string>
    <string name="invalid_password_no_special_character_error">The password must contain at least one special character</string>
    <string name="repeated_password_error">Passwords do not match</string>
    <string name="first_name_is_blank_error">First name can not be empty</string>
    <string name="last_name_is_blank_error">Last name can not be empty</string>
    <string name="terms_not_accepted_error">You must agree to the Terms of Usage to continue</string>
    <string name="privacy_not_accepted_error">You must agree to the Privacy Policy to continue</string>
    <string name="invalid_phone_error">Telephone number is invalid</string>
    <string name="street_is_blank_error">You must select a street</string>
    <string name="invalid_house_number_error">House number must be greater than %d"</string>
    <string name="minimum_age_error">You must be more than %d years old</string>
    <string name="firstName">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="street">Street*</string>
    <string name="house_number">Number*</string>
    <string name="box">Box</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="password">Password*</string>
    <string name="repeated_password">Confirm Password*</string>
    <string name="phone">Phone*</string>
    <string name="accept">I accept the</string>
    <string name="terms_of_usage">Terms of Usage</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_account_yet">"No account yet? "</string>
    <string name="register_here">Sign up here</string>
    <string name="invalid_box">Box number is invalid</string>
    <string name="invalid_street">You must select a valid street</string>
    <string name="morning_label">Morning</string>
    <string name="afternoon_label">Afternoon</string>
    <string name="evening_label">Evening</string>
    <string name="make_reservation">Make a reservation</string>
    <string name="date_of_booking">Date of booking</string>
    <string name="number_of_adults">Adults</string>
    <string name="number_of_children">Children</string>
    <string name="boat">Boat</string>
    <string name="battery">Battery</string>
    <string name="notifications_title">Notifications</string>
    <string name="booking_list_title">My bookings</string>
    <string name="expand_button_content_description">See more or less information about a booking.</string>
    <string name="no_boat_assigned">There has not yet been a boat assigned to this booking.</string>
    <string name="no_battery_assigned">There has not yet been a battery assigned to this booking.</string>
    <string name="user_has_no_bookings">You do not have any bookings yet.</string>
    <string name="close_label">Close</string>
    <string name="registration_succesful">Registration Successful</string>
    <string name="account_created">Your account has been created.</string>
    <string name="home">Home</string>
    <string name="new_booking">New Booking</string>
    <string name="menu_button">Menu button</string>
    <string name="buut_logo">Buut logo</string>
    <string name="lightbulb">Lightbulb</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_rail">Navigation rail</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="warning_icon">Warning icon</string>
    <string name="main_background_image">Main background image</string>
    <string name="work_in_progress">WIP - Work in Progress</string>
    <string name="show_calendar">Show calendar</string>
    <string name="back_button">Back button</string>
    <string name="select_date">Select a date to view the available timeslots.</string>
    <string name="info_container">Info container</string>
    <string name="loading_indicator">Loading indicator</string>
    <string name="calendar">Calendar</string>
    <string name="confirm_booking_modal_header">Confirm Booking</string>
    <string name="confirm_booking_prompt">Are you sure you want to book this time slot:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">Unkown error</string>
    <string name="booking_info_follows">Thank you for your reservation.\nWe\'ll provide you boat and battery information 2 days in advance of your booking.</string>
    <string name="profile_button">Profile</string>
    <string name="edit_profile_button">Edit</string>
    <string name="user_has_no_notifications">You have no notifications.</string>
</resources>